jump to description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
 <div class="container">
    <div class="row">
       <div class="col-md-10 offset-md-1 welcome text-center">
-         <p>{{ site.description }}</p>
+         <p><a name="desc">{{ site.description }}</a></p>
       </div>
    </div>
 </div>
