--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 
       <div>
         {% assign index = site.data.apis %}
-        {% include tag-anchors.html %}
+        {% include api-tag-anchors.html %}
       </div>
 
    </div>
